# AgentTroop

./: .env  .gitignore  CHECKPOINT.md  MODULES_DESCRIPTION.md  Makefile  README.md  TODO.md  ablation_cognitive_analysis.txt  ablation_expectations.txt  advbench.csv  cognitive_anomalies.db  emp_t_evaluation_collama34.json  emp_t_results_collama34.csv  entropy.csv  entropy_1.csv  episodic_memory.db  evaluation_report.json  example.txt  harmbench.csv  harmony_v5v.md  prompt_loader.py  pyproject.toml  requirements.txt  rq_debug.md  run_ablation1_qwen.sh  run_ablation_1_deepseek.sh  run_ablation_1_llama.sh  run_ablation_1_mimo.sh  run_ablation_1_phi.sh  run_rmcbench_asr.py  run_techniques_deepseek.sh  run_techniques_phi4.sh  run_techniques_qwen.sh  scratchpad.md  test_anomaly_threshold.py  test_intervention_coverage.py  test_llm_client.py  test_setup.py  test_surrogate.py
adapters/: __init__.py  base_victim.py  openrouter_victim.py  victim_factory.py
agents/: __init__.py  cognitive.py  red_team.py  researcher.py  strategist.py
codellama_7b/: Makefile  benign_prompts.csv  ollama_victim.py  run_exp.sh  run_experiment.py  run_guided_asr.py  setup.sh
configs/: config_quick_test.yaml  config_test_fix.yaml  config_validate.yaml  experiment_config.yaml  experiment_debug_tiny.yaml  experiment_fast_debug.yaml
core/: CORE_DESCRIPTION.md  __init__.py  condition.py  executor.py  grammar.py  hypothesis.py  intervention.py  jailbreak.py  observation.py  primitive.py  program.py  types.py  utils.py
docs/: ARCHITECTURE.md  CHANGELOG_FIXES.md  FORENSIC_AUDIT_V3.md  causal_graph.md  (+19 more)
(+878 files in other folders)
