[project]
name = "harmony-x"
version = "0.1.0"
description = "HARMONY-X: automated safety layer reverse-engineering for LLMs"
requires-python = ">=3.10"
dependencies = [
    "cvc5>=1.0",
    "datasets>=2.0.0",
    "faiss-cpu>=1.12",
    "google-genai>=0.1.0",
    "httpx>=0.25",
    "jupyter>=1.0",
    "neo4j>=5.0",
    "networkx>=3.0",
    "numpy>=1.26",
    "pytest>=7.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "redis>=5.0",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "scipy>=1.10",
    "sentence-transformers>=3.0",
]
